Sync frontend folder from main repository

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.13.3",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.468.0",
+    "motion": "^11.15.0",
     "mui": "^0.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
